overlays/prod/muve-mall/mall-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: muve-mall
spec:
  selector:
    app: muve-mall
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
  type: ClusterIP
