overlays/prod/muve-mall/mall-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: muve-mall-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:816208829212:certificate/01a38bfa-301a-43ff-bf3b-a7c9d26ee705
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: mall.muve.kr
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: muve-mall
                port:
                  number: 80
